--- a/config/openwrt-main/config
+++ b/config/openwrt-main/config
@@ -189,7 +189,7 @@ CONFIG_JSON_OVERVIEW_IMAGE_INFO=y
 CONFIG_SIGNED_PACKAGES=y
 CONFIG_SIGNATURE_CHECK=y
 CONFIG_DOWNLOAD_CHECK_CERTIFICATE=y
-
+CONFIG_GRUB_SERIAL=y
 #
 # General build options
 #
