--- a/config/openwrt-main/config
+++ b/config/openwrt-main/config
@@ -189,7 +189,7 @@ CONFIG_JSON_OVERVIEW_IMAGE_INFO=y
 CONFIG_SIGNED_PACKAGES=y
 CONFIG_SIGNATURE_CHECK=y
 CONFIG_DOWNLOAD_CHECK_CERTIFICATE=y
-CONFIG_GRUB_SERIAL=y
+#CONFIG_GRUB_SERIAL=y
 #
 # General build options
 #
@@ -1726,7 +1726,7 @@ CONFIG_ZABBIX_POSTGRESQL=y
 #
 # Boot Loaders
 #
-# CONFIG_PACKAGE_grub2-efi-arm is not set
+CONFIG_PACKAGE_grub2-efi-arm=y
 CONFIG_PACKAGE_u-boot-qemu_armv8=y
 # end of Boot Loaders
 
